--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,111 @@ ul,ol{
 a{
     text-decoration: none;
 }
+body{
+    position: relative;
+}
+
+/*=====Side Bar======*/
+.sidebar{
+    width: 350px;
+    height: 100%;
+    background: #c61c6e;
+    padding: 15px;
+    z-index: 999999999999;
+    position: fixed;
+    top:0;
+    right: -350px;
+   transition: all linear 0.3s;
+}
+.side-menu {
+    padding-top: 40px;
+}
+.side-menu a{
+    display: block;
+    text-align: center;
+    padding: 20px;
+    color: #011321;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+   text-transform: uppercase;
+   position: relative;
+}
+.side-menu a::after{
+    position: absolute;
+    content: "";
+    left: 0;
+    bottom:-10px;
+    background-color: #011321;
+    width: 0;
+    height: 2px;
+    opacity: 0;
+    transition: all linear .3s;
+}
+.side-menu a:hover::after{
+    opacity: 1;
+    width: 100%;
+}
+.sidber-icon{
+    padding-top: 30px;
+    text-align: center;
+}
+.sidber-icon i{
+   text-align: center;
+   width: 40px;
+   height: 40px;
+   line-height: 40px;
+   color: #2b2b2b;
+  
+}
+.sidber-icon i:hover{
+    border-radius: 50%;
+    background-color:#2b2b2b;
+    color: #fff;
+    transition: all  .1s;
+}
+.sidebar p {
+    margin-top: 47px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #2b2b2b;
+    text-align: left;
+    font-family: 'Oswald', sans-serif;
+    padding: 0px 20px;
+}
+
+.side-click {
+    width: 36px;
+    right: 40px;
+    top: 40px;
+    z-index: 9999;
+    left: -40px;
+    cursor: pointer;
+    position: absolute;
+    display: inline-block;
+    transition: all 0.3s linear;
+    color: #fff;
+    font-size: 20px;
+}
+
+.slide-click-2{
+    left: 310px;
+}
+
+.sideopen{
+    right: 0;
+}
+
 
 /*=======Nav Css Goes Bellow ===========*/
+
+
+
 
 .navbar{
     background: #011321;
 }
-.navbar-light .navbar-nav .nav-link.active{
+.navbar-light .navbar-nav .nav-link{
     color:  #fff;
     text-transform: uppercase;
     font-family: 'Oswald', sans-serif;
@@ -31,9 +129,14 @@ a{
     background:rgba(1, 19, 33, 0.80);
     transition: all linear 0.4s;
 }
-.nav-bg.navbar-light .navbar-nav .nav-link.active{
+.nav-bg.navbar-light .navbar-nav .nav-link{
     line-height: 50px;
 }
+
+.navbar-light .navbar-nav .nav-link.active {
+    color:#c61c6e;
+}
+
 .navbar .navbar-nav .nav-link:after{
     position: absolute;
     bottom:10px;
@@ -53,7 +156,7 @@ a{
     transition: all linear 0.6s;
 }
 
-.navbar-light .navbar-nav .nav-link.active:hover{
+.navbar-light .navbar-nav .nav-link:hover{
     color:#c61c6e ;
 }
 .navbar{
